# pygrog

./: .gitignore  README.rst  pyproject.toml
benchmark/: run_benchmark.py
docs/: explanations.rst  how_to_guides.rst  index.rst  references.rst  tutorials.rst
examples/: 01_basic_example.py  implicit_grog_example.py
src/pygrog/: __init__.py  _svd.py
src/pygrog/benchmark/: __init__.py  _cases.py  _schedule.py  _trajectory.py  cases.py  schedule.py  trajectory.py
src/pygrog/calibration/: calibration_data.py
src/pygrog/csm/: _acr.py
src/pygrog/grappa_training/: model_training.py
src/pygrog/grid_reconstruction/: sparse_to_dense.py
src/pygrog/interpolation/: apply_interpolation.py
src/pygrog/linop/: __init__.py  _nufft.py  _stacked_nufft.py  _subspace_nufft.py
src/pygrog/trajectory_preprocessing/: displacement_estimator.py
tests/: test_calibration.py
